API Change for better accuracy

--- a/config/template.ini
+++ b/config/template.ini
@@ -1,16 +1,18 @@
 #Usage: Copy file to config.ini and fill in all fields
 
 [General]
-city =
-state = 
+; city =
+; state = 
 key = 
+zip = 
+
 
 [Safety]
 maxTemp = 
 hours = 
 
 [Rig]
-key = 
-skey = 
+; key = 
+; skey = 
 worker = 
-org =
+; org =
